--- a/app/src/main/res/layout/fragment_la_mapa.xml
+++ b/app/src/main/res/layout/fragment_la_mapa.xml
@@ -34,16 +34,14 @@
 
     </LinearLayout>
 
-
+    <!-- Add the map fragment -->
     <fragment
         android:id="@+id/fgMap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/llTop_bar"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
