parece que estoy trabajando y todo eh, ahora hago mas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="green">#058E3F</color>
     <color name="light_gray2">#8CAAB9</color>
     <color name="holo_green">#00C76A</color>
+    <color name="red">#CB4F48</color>
 
 </resources>
