--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -184,41 +184,60 @@
                 android:background="@color/light_gray"/>
 
             <View
+                android:id="@+id/view7"
                 android:layout_width="match_parent"
-                android:layout_height="16dp" />
+                android:layout_height="8dp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Empieza"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="tu aventura con amigos"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:ignore="RtlCompat"/>
+
+            <View
+                android:id="@+id/view4"
+                android:layout_width="match_parent"
+                android:layout_height="8dp" />
+
+            <Button
+                android:id="@+id/btnGrupos"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/green"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:text="Comunidad"
+                android:textColor="@color/white" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
 
             <View
+                android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-            <View
+                android:id="@+id/view3"
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
 
@@ -226,7 +245,7 @@
                 android:id="@+id/btnSignOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
+                android:backgroundTint="@color/red"
                 android:padding="10dp"
                 android:text="Cerrar sesión"
                 android:textColor="@color/white" />
