--- a/app/src/main/res/layout/activity_grupos.xml
+++ b/app/src/main/res/layout/activity_grupos.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Grupos">
+    tools:context=".Grupos.Grupos">
 
     <LinearLayout
         android:id="@+id/llTop_bar"
@@ -13,24 +13,32 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:padding="20dp"
+        android:padding="30dp"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Add this ImageView for back button -->
         <ImageView
+            android:id="@+id/ivBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/flecha"/>
 
-        <TextView
-            android:id="@+id/tvGrupos"
-            android:layout_width="160dp"
-            android:layout_height="match_parent"
-            android:text="Comunidad"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginLeft="25dp"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="50dp"
+            android:src="@drawable/img_101_logo" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="6dp"
+            android:text="Mis Grupos"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ImageView
@@ -40,79 +48,43 @@
         app:layout_constraintTop_toBottomOf="@id/llTop_bar"
         android:src="@drawable/grupoajustado" />
 
-
-    <!-- Barra de navegación inferior -->
     <LinearLayout
         android:id="@+id/putamierda"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="0dp"
+        android:paddingHorizontal="24dp"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintTop_toBottomOf="@id/imageGrupo"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAmigos"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="30dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="56dp"
+            android:layout_marginVertical="8dp"
+            android:text="Amigos"
+            app:cornerRadius="8dp"
+            style="@style/Widget.MaterialComponents.Button"/>
 
-            <Button
-                android:id="@+id/btnAmigos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Amigos"/>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCrearGrupo"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="30dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="56dp"
+            android:layout_marginVertical="8dp"
+            android:text="Crear Grupo"
+            app:cornerRadius="8dp"
+            style="@style/Widget.MaterialComponents.Button"/>
 
-            <Button
-                android:id="@+id/btnCrearGrupo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Crear Grupo"/>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnUnirseGrupo"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="30dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/btnUnirseGrupo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Unirse a un Grupo"/>
-
-        </LinearLayout>
-
+            android:layout_height="56dp"
+            android:layout_marginVertical="8dp"
+            android:text="Unirse a un Grupo"
+            app:cornerRadius="8dp"
+            style="@style/Widget.MaterialComponents.Button"/>
 
     </LinearLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
