--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Perfil">
+    tools:context=".Perfil.Perfil">
 
     <LinearLayout
         android:id="@+id/llTop_bar"
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/ivBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/flecha"/>
@@ -69,13 +70,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="16dp" />
 
+
+
             <LinearLayout
+                android:id="@+id/llActiveDesafios"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
                 android:padding="00dp"
-                app:layout_constraintTop_toTopOf="parent">
+                android:clickable="true"
+                android:focusable="true">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -87,96 +92,38 @@
                     android:layout_width="273dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Mis progresos"
+                    android:text="Ver desafíos activos"
                     android:textColor="@color/light_gray2"
                     android:textSize="16sp" />
+
+                <LinearLayout
+                    android:id="@+id/progress_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="8dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/light_gray" />
+
             </LinearLayout>
 
-
-            <View
-                android:id="@+id/view14"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/light_gray" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="00dp"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/star"/>
-
-                <TextView
-                    android:layout_width="273dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="101 Croquetas"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/light_gray"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="00dp"
-                app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/star"/>
-
-                <TextView
-                    android:layout_width="273dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="101 Bares"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@color/light_gray"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="00dp"
-                app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/star"/>
-
-                <TextView
-                    android:layout_width="273dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="101 Paisajes"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -193,7 +140,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Empieza"
+                android:text="Elige"
                 android:textColor="@color/black"
                 android:textAlignment="center"
                 android:textSize="32sp"
@@ -205,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="tu aventura con amigos"
+                android:text="tu aventura y tu destino con amigos"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textAlignment="center"
