--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -36,24 +36,29 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="351dp"
-        android:layout_height="620dp"
+        android:layout_height="520dp"
         android:layout_margin="20dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+
             android:padding="20dp">
 
             <ImageView
+                android:id="@+id/ivProfilePic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/foto_perfil_ejemplo"/>
+                android:src="@drawable/foto_perfil_ejemplo"
+                android:clickable="true"
+                android:focusable="true" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -65,28 +70,30 @@
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
+
             <View
-                android:id="@+id/view"
                 android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-
+                android:layout_height="2dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/black" />
 
             <LinearLayout
                 android:id="@+id/llActiveDesafios"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/white"
-                android:orientation="horizontal"
-                android:padding="00dp"
                 android:clickable="true"
-                android:focusable="true">
+                android:focusable="true"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="00dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/trophy"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/trophy" />
 
                 <TextView
                     android:layout_width="273dp"
@@ -108,41 +115,23 @@
                     android:layout_height="2dp"
                     android:background="@color/light_gray" />
 
+                <View
+                    android:id="@+id/view7"
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
             </LinearLayout>
 
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/light_gray"/>
-
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/light_gray"/>
-
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/light_gray"/>
-
-            <View
-                android:id="@+id/view7"
-                android:layout_width="match_parent"
-                android:layout_height="8dp" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Elige"
-                android:textColor="@color/black"
+                android:layout_marginTop="10dp"
+                android:text="Comienza"
                 android:textAlignment="center"
+                android:textColor="@color/black"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 tools:ignore="RtlCompat" />
@@ -153,11 +142,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="tu aventura y tu destino con amigos"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textAlignment="center"
                 android:textStyle="bold"
-                tools:ignore="RtlCompat"/>
+                tools:ignore="RtlCompat" />
 
             <View
                 android:id="@+id/view4"
@@ -168,30 +157,18 @@
                 android:id="@+id/btnGrupos"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
                 android:layout_gravity="center"
+                android:backgroundTint="@color/green"
                 android:padding="10dp"
                 android:text="Comunidad"
                 android:textColor="@color/white" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
-            <View
-                android:id="@+id/view3"
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
 
             <Button
                 android:id="@+id/btnSignOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="120dp"
                 android:backgroundTint="@color/red"
                 android:padding="10dp"
                 android:text="Cerrar sesión"
