--- a/app/src/main/res/layout/activity_grupos.xml
+++ b/app/src/main/res/layout/activity_grupos.xml
@@ -57,7 +57,8 @@
         android:paddingHorizontal="24dp"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintTop_toBottomOf="@id/imageGrupo"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="NotSibling">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAmigos"
@@ -65,6 +66,7 @@
             android:layout_height="56dp"
             android:layout_marginVertical="8dp"
             android:text="Amigos"
+            android:backgroundTint="@color/green"
             app:cornerRadius="8dp"
             style="@style/Widget.MaterialComponents.Button"/>
 
@@ -74,6 +76,7 @@
             android:layout_height="56dp"
             android:layout_marginVertical="8dp"
             android:text="Crear Grupo"
+            android:backgroundTint="@color/green"
             app:cornerRadius="8dp"
             style="@style/Widget.MaterialComponents.Button"/>
 
@@ -83,6 +86,7 @@
             android:layout_height="56dp"
             android:layout_marginVertical="8dp"
             android:text="Unirse a un Grupo"
+            android:backgroundTint="@color/green"
             app:cornerRadius="8dp"
             style="@style/Widget.MaterialComponents.Button"/>
 
