--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -165,10 +165,20 @@
 
 
             <Button
+                android:id="@+id/btnAyudaSoporte"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:backgroundTint="@color/green"
+                android:padding="10dp"
+                android:text="Ayuda y Soporte"
+                android:textColor="@color/white" />
+
+            <Button
                 android:id="@+id/btnSignOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="20dp"
                 android:backgroundTint="@color/red"
                 android:padding="10dp"
                 android:text="Cerrar sesión"
